# vmprotect

./: .gitignore  AGENTS.md  plan.txt
core/: CMakeLists.txt
core/bootstrap/include/bootstrap/: os_hal_windows.hpp
core/cmake/: CompilerOptions.cmake  HardenTarget.cmake  PassPluginCompat.cmake  WeaverLauncher.cmake
core/dex_toolchain/: CMakeLists.txt
core/dex_toolchain/include/dex_toolchain/: bundle_format.hpp  external_key_provider.hpp  loader.hpp  manifest_contract.hpp
core/dex_toolchain/src/: bundle_format.cpp  external_key_provider.cpp  loader.cpp  loader_main.cpp  main.cpp  manifest_contract.cpp
core/docs/: eippf_vcxproj_integration.props  代理编译集成指南.md
core/include/contracts/: protection_contracts.hpp  redteam_report_contracts.hpp
core/ip_weaver/: CMakeLists.txt
core/ip_weaver/src/: main.cpp
core/ip_weaver_ir/: CMakeLists.txt
core/ip_weaver_ir/include/ip_weaver_ir/: heuristic_profiler.hpp  opcode_mapper.hpp
core/ip_weaver_ir/src/: ip_weaver_ir.cpp
core/passes/: CMakeLists.txt
core/passes/include/passes/: CFFObfuscationPass.hpp  IATMinimizationPass.hpp  JITEnclavePass.hpp  MBAObfuscationPass.hpp  ProtectionAnchorPass.hpp  ProtectionSuitePassPlugin.hpp  SelectiveVMPass.hpp  StringProtectionPass.hpp
core/passes/src/: CFFObfuscationPass.cpp  IATMinimizationPass.cpp  JITEnclavePass.cpp  MBAObfuscationPass.cpp  ProtectionAnchorPass.cpp  ProtectionSuitePassPlugin.cpp  SelectiveVMPass.cpp  StringProtectionPass.cpp
core/post_link_mutator/: CMakeLists.txt
core/post_link_mutator/include/post_link_mutator/: artifact_detector.hpp  binary_io.hpp  cli_options.hpp  elf_kernel_module_mutator.hpp  elf_user_mode_mutator.hpp  macho_user_mode_mutator.hpp  manifest_writer.hpp  mutation_trailer.hpp  mutator_app.hpp  (+3 more)
core/post_link_mutator/src/: artifact_detector.cpp  binary_io.cpp  cli_options.cpp  elf_kernel_module_mutator.cpp  elf_user_mode_mutator.cpp  macho_user_mode_mutator.cpp  main.cpp  manifest_writer.cpp  mutation_trailer.cpp  mutator_app.cpp  pe_kernel_driver_mutator.cpp  pe_user_mode_mutator.cpp  target_classifier.cpp
core/runtime/: CMakeLists.txt
core/runtime/src/: EippfRuntime.cpp  android_so_policy.cpp  backend_policy.cpp  policy_engine.cpp  secure_ir_engine.cpp  string_token_runtime.cpp  vm_runtime_bridge.cpp
core/script_guard/: CMakeLists.txt
core/script_guard/src/: bundle_format.cpp  external_key_provider.cpp  launcher.cpp  launcher_main.cpp  main.cpp  unsafe_shell_scan.cpp
core/tests/: CMakeLists.txt
core/tests/contracts/: CMakeLists.txt  protection_contracts_test.cpp
core/tests/dex_toolchain/: CMakeLists.txt  android_dex_failure_test.cpp  android_dex_security_edge_test.cpp  android_dex_success_test.cpp  dex_toolchain_smoke_test.cpp
core/tests/ip_weaver_ir/: opcode_mapper_test.cpp
core/tests/lane_android_kernel/: CMakeLists.txt  android_kernel_module_failure_test.cpp  android_kernel_module_security_edge_test.cpp  android_kernel_module_success_test.cpp
core/tests/lane_ios_safe/: CMakeLists.txt  ios_safe_failure_test.cpp  ios_safe_security_edge_test.cpp  ios_safe_success_test.cpp  ios_safe_test_common.hpp
core/tests/lane_linux_kernel/: CMakeLists.txt  linux_kernel_module_failure_test.cpp  linux_kernel_module_security_edge_test.cpp  linux_kernel_module_success_test.cpp
core/tests/lane_windows_driver/: CMakeLists.txt  windows_driver_failure_test.cpp  windows_driver_security_edge_test.cpp  windows_driver_success_test.cpp
core/tests/passes/: CMakeLists.txt  cff_obfuscation_pass_test.cpp  iat_minimization_pass_test.cpp  protection_suite_pass_test.cpp  string_protection_pass_test.cpp
core/tests/perf/: CMakeLists.txt  android_kernel_module_perf_smoke_test.cpp  dex_loader_perf_smoke_test.cpp  ios_safe_perf_smoke_test.cpp  linux_kernel_module_perf_smoke_test.cpp  runtime_backend_perf_test_common.hpp  shell_launcher_perf_smoke_test.cpp  user_mode_perf_smoke_test.cpp  windows_driver_perf_smoke_test.cpp
core/tests/post_link_mutator/: CMakeLists.txt  post_link_mutator_derived_target_kind_contract_test.cpp  post_link_mutator_exit_code_trailer_contract_test.cpp  post_link_mutator_fault_isolation_contract_test.cpp  post_link_mutator_hardened_pipeline_contract_test.cpp  post_link_mutator_kernel_mutator_contract_test.cpp  post_link_mutator_smoke_test.cpp  post_link_mutator_target_classifier_test.cpp  post_link_mutator_thin_entry_proof_test.cpp  post_link_mutator_user_mode_contract_test.cpp
core/tests/sample_suite/: fixture_signers.py  sample_manifest.json  sample_suite_report_contract_test.py
core/tests/script_guard/: CMakeLists.txt  script_guard_smoke_test.cpp  script_launcher_failure_test.cpp  script_launcher_security_edge_test.cpp  script_launcher_success_test.cpp
core/tests/tools/: CMakeLists.txt  android_so_pipeline_smoke_test.cpp  artifact_audit_matching_test.py  artifact_audit_strict_test.cpp  artifact_audit_user_mode_test.cpp  gate_redteam_report_test.py  hardened_target_pipeline_test.cpp  hardened_target_runtime_kind_test.cpp  hardened_target_secure_ir_engine_test.cpp  jit_enclave_pipeline_gate_test.cpp  protect_and_evaluate_redteam_gate_test.py  redteam_harness_integration_test.py  redteam_perf_compare_test.py  redteam_perf_smoke_collect_test.py  redteam_report_contract_test.py  redteam_runtime_probe_test.py  run_redteam_runtime_probes_test.py  signature_verifier_fixture.py  user_mode_pipeline_fixture.cpp  user_mode_pipeline_test.cpp
core/tools/: CMakeLists.txt  artifact_audit.py  lexical_anchor_denylist.txt  redteam_harness.py  redteam_host_probe.cpp  redteam_perf_compare.py  redteam_perf_smoke_collect.py  redteam_runtime_probe.py  setup_build_env.sh
core/tools/sample_suite/: build_linux_android.sh  build_macos_ios.sh  build_windows.ps1  gate_redteam_report.py  protect_and_evaluate.py  report_template.html  run_redteam_runtime_probes.py
core/wrapper/: CMakeLists.txt  eippf_cc.py  eippf_cl_wrapper.cmd  eippf_link_wrapper.cmd  eippf_vcxproj_batch_attach.cmd  eippf_vcxproj_batch_attach.ps1  eippf_windows_oneclick.cmd  heuristic_profiler.py  weaver_proxy.py
core/wrapper/src/: flag_mapper.cpp  flag_mapper.hpp  main.cpp
(+239 files in other folders)
